# rust_syslog_sniffer

./: .gitignore  Cargo.toml  DOCKER_ALPINE.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.alpine  Dockerfile.alpine.multiarch  Dockerfile.release  Dockerfile.trixie  Dockerfile.trixie.multiarch  LICENSE.md  Makefile  README.md  clippy.toml  sbom.json
.github/: CODEOWNERS  dependabot.yml
.github/actions/check-version-change/: action.yml
.github/workflows/: ci.yml  docker-alpine.yml  docker-debian.yml  publish-docker.yml
docs/: DOCKER_DEPLOYMENT.md  DOCKER_TRIXIE.md  TESTING.md  WORKFLOW_SUMMARY.md
src/: app.rs  capture.rs  config.rs  lib.rs  main.rs  stats.rs
tests/: e2e.sh  e2e_docker.sh  e2e_periodic_docker.sh  integration_test.rs
