[package]
name = "syslog_sniffer"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
pcap = "0.11.0"
log = "0.4"
env_logger = "0.10"
