[package]
name = "syslog_sniffer"
version = "0.1.20"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
pcap = "2.4.0"
log = "0.4"
env_logger = "0.11"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"